Don't syntax-check gripe.sh .
The pod documentation causes problems, and it's a mature include-file,
so just ignore it.

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,6 +1,8 @@
 SHELL := /bin/bash
 
 allfiles :=  $(wildcard *.sh *.pl)
+no-check := gripe.sh
+allfiles := $(filter-out $(no-check),$(allfiles))
 basenames := $(basename $(allfiles))
 syntaxfiles := $(addsuffix .syntax, $(basenames))
 
