Permit 'make clean'

--- a/code/Makefile
+++ b/code/Makefile
@@ -5,3 +5,9 @@ toc: notes
 	for i in *; do if [ -f $$i/Makefile ]; then grep 'Chapter.*:' $$i/Notes.txt; grep 'url :=' $$i/Makefile; fi; done > TOC
 
 	perl -i -ne 'chomp; if (/Chapter/) {print "$$_ -- ";} else { s/url\s:=//; print $$_; print "\n"; }' TOC
+
+clean:
+	git status -s | awk '/^\?\?/{print "rm", $$2}' | bash
+
+.PHONY: notes toc clean
+
